- Improved memory usage by moving constants to read only memory.
  (Dmitry, Pierre)

- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)

- Fixed bug #42848 (Status: header incorrect under FastCGI). (Dmitry)
- Fixed bug #42773 (WSDL error causes HTTP 500 Response). (Dmitry)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines). (Nuno)
- Fixed bug #42657 (ini_get() returns incorrect value when default is NULL).
  (Jani)
- Fixed bug #42637 (SoapFault : Only http and https are allowed). (Bill Moran)
- Fixed bug #42509 (gmp leaks memory when gmp_init() not used). (Stas)
- Fixed bug #42284 (duplicate of #39700). (Lars W)
- Fixed bug #42069 (parse_ini_file() allows using some non-alpha numeric
  characters). (Jani)
- Fixed bug #41522 (PDO firebird driver returns null if it fails to connect). 
  (Lars W)
- Fixed bug #39822 (new PDO() doesn't work with firebird). (Lars W)
- Fixed bug #39700 (NUMERIC error when result precision are 7,8 or 12-14 ). 
  (Lars W)
- Fixed bug #39397 (invalid statement handle in Unknown on line 0). (Lars W)
- Fixed bug #39056 (Interbase NUMERIC data type error). (Lars W)
- Fixed bug #37911 (preg_replace_callback() ignores named groups). (Nuno)
- Fixed bug #36128 (Interbase PDO - timestamp columns return NULL). (Lars W)
- Fixed bug #35386 (firebird: first row is null). (Lars W)
- Fixed bug #35163 (Array elements can lose references). (Dmitry)
- Fixed bug #32143 (ibase_query() causing IBserver 7 crash with NULL param as
  link-id). (Lars W)
- Fixed bug #30907 (ibase_query() crashes (same bug as #32143). (Lars W)
- Fixed bug #30690 (Resource handle from ibase_execute becomes invalid after 
  return). (Lars W)
- Fixed bug #27372 (parse error loading browscap.ini at apache startup).
  (Jani)

30 Aug 2007, PHP 5.2.4
- Removed --enable-versioning configure option. (Jani)

- Upgraded PCRE to version 7.2 (Nuno)
- Updated timezone database to version 2007.6. (Derick)
