@@ -51,7 +51,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: xmlrpc-epi-php.c,v 1.39.2.5.2.6.2.1 2007/09/27 18:00:46 dmitry Exp $ */
+/* $Id: xmlrpc-epi-php.c,v 1.39.2.5.2.6.2.2 2007/11/12 11:23:04 tony2001 Exp $ */
 
 /**********************************************************************
 * BUGS:                                                               *
@@ -523,7 +523,7 @@ static XMLRPC_VALUE PHP_to_XMLRPC_worker (const char* key, zval* in_val, int dep
                              break;
                          case HASH_KEY_IS_STRING:
                          case HASH_KEY_IS_LONG:
-                              ht = HASH_OF(*pIter);
+                             ht = HASH_OF(*pIter);
                              if (ht) {
                                  ht->nApplyCount++;
                              }
@@ -874,10 +874,9 @@ static XMLRPC_VALUE php_xmlrpc_callback(XMLRPC_SERVER server, XMLRPC_REQUEST xRe
 
    pData->php_executed = 1;
 
-	zval_dtor(xmlrpc_params);
-	FREE_ZVAL(xmlrpc_params);
+   zval_ptr_dtor(&xmlrpc_params);
 
-	return NULL;
+   return NULL;
 }
 
 /* called by the C server when it first receives an introspection request.  We pass this on to
